# agentic_reflexion

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/agentic_prac/: __init__.py  lab - Building a Reflexion Agent with External Knowledge In.ipynb  lab_reflex.py  lab_reflexion.ipynb  reading.py
src/agentic_prac/.ipynb_checkpoints/: lab_reflexion-checkpoint.ipynb
